# Linux

./: update_to_github.sh
arg_opt_test/: ArgOpt.cpp  ArgOpt.h  build.sh  main.cpp
boost_test/: build.sh  main.cpp  rolling_mean.cpp  rolling_mean2.cpp
call_exe/: build  call_exe.cpp
cmd_shell/res/: cmd_shell.sh  (+1 more)
config_file_test/: SCAConfig.cpp  SCAConfig.h  build.sh  main.cpp
cpp_micro_test/: build.sh  cpp_micro_test.cpp  micro_test.c
cpu/: cpuinfo  cpuinfo.xlsx
cuda_test/: CMakeLists.txt  cuda.txt  main.c
cuda_test/cuda/: CMakeLists.txt  censusDemo.cu  censusDemo.cu~  census_test.cuh  common.h  deviceCap.cu  deviceCap.cuh  deviceCap.cu~  threadDemo.cu  threadDemo.cuh  threadDemo.cu~
fileop/: build  filedir.cpp  filedirsort.cpp
glog/: example.tar
input_test/: build.sh  test_input.cc
key_input_test/: CmdInput.cpp  CmdInput.h  KeyInput copy 2.cpp  KeyInput copy 2.h  KeyInput copy.cpp  KeyInput copy.h  build.sh  key_input_test copy 2.cpp  key_input_test copy 3.cpp  key_input_test copy 4.cpp  key_input_test copy 5.cpp  key_input_test copy.cpp  main.cpp
log_test/: FileUtil.cpp  FileUtil.h  LogUtil.cpp  LogUtil.h  build.sh  main.cpp
print_test/: build.sh  print_test.cpp
ptr_test/: build.sh  ptr_test.cpp
sh/: update_to_github.sh
std_string/: build  std_string.cpp
std_test/: queue_test.cpp  test_arg.cpp
stm32_flash/: #ymodem.c#  .#ymodem.c  Android.mk  CMakeLists.txt  binary.c  binary.h  can.c  command.h  down.sh  main.c  port.c  port.h  serial.h  serial_port.c  ymodem.c  ymodem.h
sys_test/: build.sh  sys_test.cpp
thread/: build.sh  sem_test.cpp  sem_test0.cpp  sem_test1.cpp  sem_test2.cpp
time_test/: TimeUtils.cpp  TimeUtils.h  build.sh  main.cpp
(+47 files in other folders)
